--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql=true
 # schema will be automatically updated accordingly to java entities found in the project
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8088
+
 
 
 
